--- a/app/src/main/res/layout/activity_notebook.xml
+++ b/app/src/main/res/layout/activity_notebook.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,65 +9,82 @@
 
     <EditText
         android:id="@+id/edit_text_title"
-        android:layout_width="match_parent"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
-        android:hint="title"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="52dp"
+        android:background="@drawable/edit_text_style"
+        android:hint="Nome do Caderno"
         android:inputType="text"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="35dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edit_text_Description"
-        android:layout_width="match_parent"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="description"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/edit_text_style"
+        android:hint="Descrição"
         android:inputType="text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp" />
-    <EditText
-        android:id="@+id/edit_text_priority"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="priority"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_Description"
+        tools:ignore="MissingConstraints" />
 
-        android:inputType="number"/>
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:onClick="addNote"
-        android:text="Adicionar Nota"
-        app:layout_constraintTop_toBottomOf="@+id/edit_text_priority"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <Button
-        android:id="@+id/btn_load"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:onClick="loadNotes"
-        android:text="Load"
-        app:layout_constraintTop_toBottomOf="@+id/btn_save"
-        tools:layout_editor_absoluteX="8dp" />
+        android:hint="Priority:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.63"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_Description" />
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
+    <NumberPicker
+        android:id="@+id/number_pick_priority"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btn_load"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-        <TextView
-            android:id="@+id/text_view_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="72dp"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteX="16dp" />
-    </android.support.v4.widget.NestedScrollView>
+    <Button
+        android:id="@+id/btn_add_note"
+        android:onClick="saveNote"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_style"
+        android:text="Criar Caderno"
+        android:textColor="#ffffff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintVertical_bias="0.773" />
 
-
-</android.support.constraint.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/add_note_progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_add_note"
+        app:layout_constraintEnd_toEndOf="@+id/btn_add_note"
+        app:layout_constraintStart_toStartOf="@+id/btn_add_note"
+        app:layout_constraintTop_toTopOf="@+id/btn_add_note"
+        app:layout_constraintVertical_bias="0.0" />
+</android.support.constraint.ConstraintLayout >
